[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Num.tscn" type="PackedScene" id=2]
[ext_resource path="res://Color.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorBord" type="GridContainer" parent="CanvasLayer/UI/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color01" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_right = 132.0
margin_bottom = 132.0

[node name="Color02" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 142.0
margin_right = 274.0
margin_bottom = 132.0

[node name="Color03" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 284.0
margin_right = 416.0
margin_bottom = 132.0

[node name="Color04" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 426.0
margin_right = 558.0
margin_bottom = 132.0

[node name="Color05" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_top = 142.0
margin_right = 132.0
margin_bottom = 274.0

[node name="Color06" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 142.0
margin_top = 142.0
margin_right = 274.0
margin_bottom = 274.0

[node name="Color07" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 284.0
margin_top = 142.0
margin_right = 416.0
margin_bottom = 274.0

[node name="Color08" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 426.0
margin_top = 142.0
margin_right = 558.0
margin_bottom = 274.0

[node name="Color09" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_top = 284.0
margin_right = 132.0
margin_bottom = 416.0

[node name="Color10" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 142.0
margin_top = 284.0
margin_right = 274.0
margin_bottom = 416.0

[node name="Color11" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 284.0
margin_top = 284.0
margin_right = 416.0
margin_bottom = 416.0

[node name="Color12" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 426.0
margin_top = 284.0
margin_right = 558.0
margin_bottom = 416.0

[node name="Color13" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_top = 426.0
margin_right = 132.0
margin_bottom = 558.0

[node name="Color14" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 142.0
margin_top = 426.0
margin_right = 274.0
margin_bottom = 558.0

[node name="Color15" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 284.0
margin_top = 426.0
margin_right = 416.0
margin_bottom = 558.0

[node name="Color16" parent="CanvasLayer/UI/MarginContainer/ColorBord" instance=ExtResource( 3 )]
margin_left = 426.0
margin_top = 426.0
margin_right = 558.0
margin_bottom = 558.0

[node name="GameBord" type="GridContainer" parent="CanvasLayer/UI/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num01" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_right = 132.0
margin_bottom = 132.0

[node name="Num02" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 142.0
margin_right = 274.0
margin_bottom = 132.0

[node name="Num03" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 284.0
margin_right = 416.0
margin_bottom = 132.0

[node name="Num04" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 426.0
margin_right = 558.0
margin_bottom = 132.0

[node name="Num05" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_top = 142.0
margin_right = 132.0
margin_bottom = 274.0

[node name="Num06" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 142.0
margin_top = 142.0
margin_right = 274.0
margin_bottom = 274.0

[node name="Num07" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 284.0
margin_top = 142.0
margin_right = 416.0
margin_bottom = 274.0

[node name="Num08" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 426.0
margin_top = 142.0
margin_right = 558.0
margin_bottom = 274.0

[node name="Num09" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_top = 284.0
margin_right = 132.0
margin_bottom = 416.0

[node name="Num10" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 142.0
margin_top = 284.0
margin_right = 274.0
margin_bottom = 416.0

[node name="Num11" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 284.0
margin_top = 284.0
margin_right = 416.0
margin_bottom = 416.0

[node name="Num12" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 426.0
margin_top = 284.0
margin_right = 558.0
margin_bottom = 416.0

[node name="Num13" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_top = 426.0
margin_right = 132.0
margin_bottom = 558.0

[node name="Num14" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 142.0
margin_top = 426.0
margin_right = 274.0
margin_bottom = 558.0

[node name="Num15" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 284.0
margin_top = 426.0
margin_right = 416.0
margin_bottom = 558.0

[node name="Num16" parent="CanvasLayer/UI/MarginContainer/GameBord" instance=ExtResource( 2 )]
margin_left = 426.0
margin_top = 426.0
margin_right = 558.0
margin_bottom = 558.0

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
